Implement whole functionality for Teacher Details Dialog

--- a/SchoolManagementSystem.csproj
+++ b/SchoolManagementSystem.csproj
@@ -150,6 +150,9 @@
     <Compile Include="User Controls\StudentDetailsDialog.xaml.cs">
       <DependentUpon>StudentDetailsDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="User Controls\TeacherDetailsDialog.xaml.cs">
+      <DependentUpon>TeacherDetailsDialog.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Home.xaml.cs">
@@ -235,6 +238,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="User Controls\StudentDetailsDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="User Controls\TeacherDetailsDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
