Remove unused Event OkayButton Clicked

--- a/SchoolManagementSystem.csproj
+++ b/SchoolManagementSystem.csproj
@@ -185,7 +185,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Home.xaml">
